--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,20 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
+    android:backgroundTint="#F9FFFE"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:gravity="center"
-    tools:context=".Profile"
+    tools:context=".activities.Profile">
 
-    android:backgroundTint="#F9FFFE">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="06dp"
+        android:layout_marginBottom="30dp"
+
+        android:orientation="horizontal">
+
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="36dp"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            app:srcCompat="@drawable/baseline_arrow_back_24"
+
+            />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15sp"
         android:gravity="center"
-
         android:orientation="vertical">
-
 
         <TextView
             android:id="@+id/textView"
@@ -26,11 +42,13 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16sp"
             android:fontFamily="@font/lato_bold"
-            android:text="Choose how other see you"
+            android:gravity="center_horizontal"
+            android:text="Choose how others see you"
             android:textColor="#56B7C3"
             android:textSize="25sp"
             tools:layout_editor_absoluteX="138dp"
             tools:layout_editor_absoluteY="49dp" />
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
@@ -46,15 +64,17 @@
             android:drawableStart="@drawable/baseline_person_24"
             android:fontFamily="@font/lato_bold"
             android:hint="Name" />
+
         <EditText
-        android:id="@+id/e3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16sp"
-        android:background="@drawable/edit_textfiled"
-        android:drawableStart="@drawable/baseline_tag_24"
-        android:fontFamily="@font/lato_bold"
-        android:hint="#tag" />
+            android:id="@+id/e3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16sp"
+            android:background="@drawable/edit_textfiled"
+            android:drawableStart="@drawable/baseline_tag_24"
+            android:fontFamily="@font/lato_bold"
+            android:hint="#tag" />
+
         <EditText
             android:id="@+id/e2"
             android:layout_width="match_parent"
@@ -67,15 +87,13 @@
 
         <Button
             android:id="@+id/button"
-
             android:layout_width="200dp"
             android:layout_height="63dp"
             android:layout_marginBottom="16sp"
             android:backgroundTint="#56B7C3"
             android:text="Update profile"
             android:textSize="20sp" />
-
-
-
     </LinearLayout>
+
+
 </LinearLayout>
