--- a/app/src/main/res/layout/chat_user_item.xml
+++ b/app/src/main/res/layout/chat_user_item.xml
@@ -45,7 +45,9 @@ android:padding="12dp">
             android:id="@+id/recent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Recent chat" />
+            android:text="Recent chat"
+            android:textColor="#A4A4A4"
+            />
     </LinearLayout>
 
     <LinearLayout
