--- a/app/src/main/res/layout/resimageitem.xml
+++ b/app/src/main/res/layout/resimageitem.xml
@@ -7,17 +7,15 @@
     android:paddingHorizontal="6dp"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/usermessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/res_drawable"
+    <ImageView
+        android:id="@+id/userimage"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:paddingVertical="8dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:text="just say chill"
-        android:textColor="@color/white"
-        android:textSize="16sp"
+
+        app:circularflow_radiusInDP="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
