--- a/app/src/main/res/layout/sendimageitem.xml
+++ b/app/src/main/res/layout/sendimageitem.xml
@@ -8,17 +8,15 @@
 
     >
 
-    <TextView
-        android:id="@+id/usermessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="just say chill"
-        android:background="@drawable/send_drawable"
-        android:textColor="@color/white"
-        android:textSize="16sp"
+    <ImageView
+        android:id="@+id/userimage"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+
+        android:paddingVertical="8dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:paddingVertical="8dp"
+        app:circularflow_radiusInDP="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
